[package]
name = "sysfs-pwm"
version = "0.1.0"
authors = [
    "Rust Embedded WG Linux Team <embedded-linux@teams.rust-embedded.org>",
    "Paul Osborne <osbpau@gmail.com>"
]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-embedded/rust-sysfs-pwm"
homepage = "https://github.com/rust-embedded/rust-sysfs-pwm"
documentation = "https://docs.rs/sysfs-pwm"
description = """
Provides access to the Linux sysfs interfaces to PWMs.
Via this crate you can export, unexport, and control PWM pins for
which there is an appropriate driver loaded in the kernel.

See https://www.kernel.org/doc/Documentation/pwm.txt
"""
readme = "README.md"
categories = ["embedded", "hardware-support"]
keywords = ["linux", "pwm"]

[dependencies]
